<resources>
    <string name="app_name">Happy Cooking</string>

    <string name="title_activity_home">Happy Cooking Bla Blo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Happy Cooking</string>
    <string name="nav_header_subtitle">minhtran0918@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">All Recipes</string>

    <string name="error_load_data_retrofit">Please check your connection!</string>

    <string name="nav_title_all_recipe">All Recipe</string>
    <string name="nav_title_favorite">Favorite</string>
    <string name="nav_title_suggest">Menu suggestions</string>
    <string name="nav_group_category">Category</string>
    <string name="nav_title_cake">Món bánh</string>
    <string name="nav_title_soup">Món canh</string>
    <string name="nav_title_porridge">Món chè</string>
    <string name="nav_title_fried_food">Món chiên</string>
    <string name="nav_title_steaming">Món hấp</string>
    <string name="nav_title_appetized">Món khai vị</string>
    <string name="nav_title_cook_with_sauce">Món kho</string>
    <string name="nav_title_stir_fry">Món xào</string>
    <string name="nav_title_smoothies">Sinh tố, giải khát</string>
    <string name="nav_title_login">Login</string>

    <string name="menu_rate">Rate</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>

    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message"><![CDATA["Happy Cooking 1.0.0 <br />Developer by <a href="https://www.facebook.com/minhtran0918">MinhTran</a><br />Email: minhtran0918@gmail.com]]></string>
    <string name="test_content">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>

    <string name="fragment_recipe_detail_intro_title">Intro</string>
    <string name="fragment_recipe_detail_ingredients_title">Ingredients</string>
    <string name="fragment_recipe_detail_instruction_title">Instruction</string>
    <string name="fragment_recipe_detail_mess_favorite_select">Add recipe into favorite</string>
    <string name="fragment_recipe_detail_mess_favorite_unselect">Remove from favorites</string>

    <string name="facebook_app_id">237123983719406</string>
    <string name="fb_login_protocol_scheme">fb237123983719406</string>
</resources>
