<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_recipe"
            android:icon="@null"
            android:title="@string/nav_title_all_recipe" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@null"
            android:title="@string/nav_title_favorite" />

    </group>
    <item android:title="@string/nav_group_category">
        <menu>
            <item
                android:id="@+id/nav_cake"
                android:icon="@null"
                android:title="@string/nav_title_cake" />
            <item
                android:id="@+id/nav_soup"
                android:icon="@null"
                android:title="@string/nav_title_soup" />
            <item
                android:id="@+id/nav_porriedge"
                android:icon="@null"
                android:title="@string/nav_title_porridge" />
            <item
                android:id="@+id/nav_fried_food"
                android:icon="@null"
                android:title="@string/nav_title_fried_food" />
            <item
                android:id="@+id/nav_steaming"
                android:icon="@null"
                android:title="@string/nav_title_steaming" />
            <item
                android:id="@+id/nav_appetized"
                android:icon="@null"
                android:title="@string/nav_title_appetized" />
            <item
                android:id="@+id/nav_cook_with_sauce"
                android:icon="@null"
                android:title="@string/nav_title_cook_with_sauce" />
            <item
                android:id="@+id/nav_stir_fry"
                android:icon="@null"
                android:title="@string/nav_title_stir_fry" />
            <item
                android:id="@+id/nav_smoothies"
                android:icon="@null"
                android:title="@string/nav_title_smoothies" />
        </menu>
    </item>

</menu>
